--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ LOG_LEVEL=debug
 # DB_PASSWORD=
 
 DB_CONNECTION=sqlite
-DB_DATABASE=./pharmacy.sqlite
+DB_DATABASE=/pharmacy.sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
